@@ -1,4 +1,4 @@
-@set UPDATED 13 August 2004
-@set UPDATED-MONTH August 2004
-@set EDITION 1.71
-@set VERSION 1.71
+@set UPDATED 29 December 2004
+@set UPDATED-MONTH December 2004
+@set EDITION 1.72
+@set VERSION 1.72
